# yaef

./: CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_binary_search.hpp  benchmark_eliasfano_list.hpp  benchmark_eliasfano_sequence.hpp  benchmark_stl_set.hpp  common.hpp  single_eliasfano_benchmark.cpp
include/yaef/: yaef.hpp
include/yaef/utils/: bit_generator.hpp  defer_guard.hpp  int_generator.hpp  random.hpp
tests/: CMakeLists.txt  bit_view_test.cpp  bitmap_foreach_test.cpp  bitset_foreach_test.cpp  eliasfano_code_test.cpp  eliasfano_list_test.cpp  eliasfano_sequence_test.cpp  eliasfano_sparse_bitmap_test.cpp  hybrid_list_test.cpp  packed_int_view_test.cpp  selectable_dense_bits_test.cpp  sparse_sampled_list_test.cpp
tests/benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark_eliasfano_list.hpp  benchmark_hybrid_list.hpp  benchmark_packed_array.hpp  benchmark_packed_binary_search.hpp  benchmark_plain_array.hpp  benchmark_sparse_sampled_list.hpp  common.hpp  selectable_dense_bits_benchmark.cpp  single_eliasfano_benchmark.cpp
tests/utils/: bit_generator.hpp  defer_guard.hpp  int_generator.hpp  random.hpp
